--- a/a.html
+++ b/a.html
@@ -7,6 +7,7 @@
 <body>
 <h1>Page 'A'</h1>
 <p>This is the 'A' page.</p>
+<p><a href="final.html">目標ページ</a></p>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
